# Human_Native

./: .coverage  .flake8  .gitignore  README.md  codecov.yml  demo.ipynb  dockerfile  pyproject.toml
.github/workflows/: ci-cd.yml
App/: app.py
App/data/: data_generation.py
App/sources/: PIIDetector_bert.py  PIIDetector_rf.py  data_class.py  evaluation.py
data/: data_generation.py
tests/: test_app.py
