[tool.poetry]
name = "pii-detection-api"
version = "0.1.0"
description = "API for detecting Personally Identifiable Information in text using BERT model"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "App"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = "^0.21.1"
torch = "^2.0.0"
transformers = "^4.28.1"
pydantic = "^2.0.0"
spacy = "^3.7.0" 

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"] 